--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="container">
     <div class="column">
 
-      <img class="avatar avatar--rounded" src="https://www.gravatar.com/avatar/ada956a2c2554995a9471864143d5d24?s=150" srcset="https://www.gravatar.com/avatar/ada956a2c2554995a9471864143d5d24?s=300 2x" alt="Ryan Fitton">
+      <img class="avatar avatar--rounded" src="https://ryanfitton.co.uk/cdn-cgi/image/width=150,quality=75,format=webp/static/img/bio/ryanfitton.jpg" srcset="https://ryanfitton.co.uk/cdn-cgi/image/width=300,quality=75,format=webp/static/img/bio/ryanfitton.jpg 2x" alt="Ryan Fitton">
 
       <h1>
         <div>Ryan Fitton</div>
