--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         
         <a class="button button-default" href="https://ryanfitton.co.uk/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-website.svg" alt="Website Icon">Website and Blog</a>
 
-        <a class="button button-coffee" href="https://buymeacoffee.com/ryanfitton" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/buy-me-a-coffee.svg" alt="Buy Me A Coffee Logo">Buy Me A Coffee</a>
+        <!--<a class="button button-coffee" href="https://buymeacoffee.com/ryanfitton" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/buy-me-a-coffee.svg" alt="Buy Me A Coffee Logo">Buy Me A Coffee</a>-->
 
         <a class="button button-alt" href="https://status.ryanfitton.co.uk/" target="_blank" rel="noopener" role="button">Status Page</a>
         
