--- a/index.html
+++ b/index.html
@@ -63,24 +63,23 @@
 
         <a class="button button-github" href="https://github.com/ryanfitton/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
 
-        <a class="button button-mastodon" href="https://mastodon.social/@ryanfitton" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a>
+        <!--<a class="button button-mastodon" href="https://mastodon.social/@ryanfitton" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a>-->
 
         <a class="button button-yt" href="https://www.youtube.com/@Ryan.Fitton" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/youtube.svg" alt="YouTube Logo">YouTube</a>
 
         <a class="button button-instagram" href="https://www.instagram.com/ryanfittonuk/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
 
-        <a class="button button-threads" href="https://www.threads.net/@ryanfittonuk" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/threads.svg" alt="Threads Logo">Threads</a>
+        <!--<a class="button button-threads" href="https://www.threads.net/@ryanfittonuk" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/threads.svg" alt="Threads Logo">Threads</a>-->
 
         <a class="button button-faceb" href="https://www.facebook.com/rfitton" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/facebook.svg" alt="Facebook Logo">Find us on Facebook</a>
 
-        <a class="button button-x" href="https://x.com/ryanfitton" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/x.svg" alt="X Logo">Follow on X (Twitter)</a>
+        <!--<a class="button button-x" href="https://x.com/ryanfitton" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/x.svg" alt="X Logo">Follow on X (Twitter)</a>-->
 
-        <a class="button button-bluesky" href="https://bsky.app/profile/ryanfitton.bsky.social" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bluesky.svg" alt="Bluesky Logo">Bluesky</a>
-
+        <!--<a class="button button-bluesky" href="https://bsky.app/profile/ryanfitton.bsky.social" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bluesky.svg" alt="Bluesky Logo">Bluesky</a>-->
       </div>
         
       <footer>
-        <a href="https://ryanfitton.co.uk/policies/" target="_blank" rel="noopener">Privacy Policy</a> | <a href="https://status.ryanfitton.co.uk/" target="_blank" rel="noopener">Status</a>
+        <a href="https://ryanfitton.co.uk/policies/" target="_blank" rel="noopener">Policies</a> | <a href="https://status.ryanfitton.co.uk/" target="_blank" rel="noopener">Status</a>
       </footer>
       
     </div>
