--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <!--<a class="button button-threads" href="https://www.threads.net/@ryanfittonuk" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/threads.svg" alt="Threads Logo">Threads</a>-->
 
-        <a class="button button-faceb" href="https://www.facebook.com/rfitton" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/facebook.svg" alt="Facebook Logo">Find us on Facebook</a>
+        <!--<a class="button button-faceb" href="https://www.facebook.com/rfitton" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/facebook.svg" alt="Facebook Logo">Find me on Facebook</a>-->
 
         <!--<a class="button button-x" href="https://x.com/ryanfitton" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/x.svg" alt="X Logo">Follow on X (Twitter)</a>-->
 
